apps/deepseek/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepseek-deployment
  namespace: deepseek
  labels:
    app: deepseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepseek
  template:
    metadata:
      labels:
        app: deepseek
    spec:
      nodeSelector:
        node.kubernetes.io/gpu: "true"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      serviceAccountName: deepseek-api-sa
      containers:
      - name: deepseek
        image: 891377073036.dkr.ecr.us-west-2.amazonaws.com/deepseek-api:latest
        command: ["python3", "-m", "vllm.entrypoints.openai.api_server"]
        args: ["--model", "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B", "--trust-remote-code","--dtype=half"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            nvidia.com/gpu: "1"
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: "/root/.cache/huggingface"
          name: efs-volume
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-pvc
